[package]
name = "satsuma"
version = "0.1.0"
authors = ["julianknodt <julianknodt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
priority-queue = "0.6.0"
rustc-hash = "1.1.0"
hashbrown = "0.9.0"
clap = { version = "2.33.1", optional = true }

[features]
default = ["clap"]

[profile.release]
lto = true
codegen-units=1

[[bin]]
name = "satsuma"
required-features = ["clap"]
